# langchain-content-wrangling

./: .gitignore  README.md  pyproject.toml  wrangling-demo.ipynb
content/: 2024Q4_earnings_call_transcript.txt  company_description.txt  net_earnings_call_transcripts.csv
utils/: classification.py  extraction.py  plots.py  summarization.py
